--- a/css.home/main.css
+++ b/css.home/main.css
@@ -1,365 +1,3 @@
-@media only screen and (min-width: 250px) {
-  body {
-    font-family: "Libre Baskerville", "Inter";
-    background-color: rgb(255, 255, 255);
-    margin: 1.5em;
-    height: 300em;
-  }
-  a {
-    text-decoration: none;
-  }
-  .white-logoweb {
-    display: none;
-  }
-  .white-logo {
-    margin-right: 2em;
-    height: 3em;
-  }
-  nav {
-    position: fixed;
-    right: 0;
-    top: 0;
-    background-color: white;
-    height: 100vh;
-    width: 50%;
-    z-index: 999;
-    text-transform: none;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in-out;
-  }
-  nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin-top: 6em;
-  }
-  nav ul .cta-btns {
-    margin: 4em 0;
-  }
-  nav ul .primary-cta {
-    background-color: #3405E1;
-    font-size: 1em;
-    font-weight: normal;
-    color: white;
-    text-decoration: none;
-    border-radius: 1em;
-    padding: 0.6em 1.2em 0.6em 1.2em;
-    font-family: "Inter";
-    margin: 2em 1.2em;
-    width: 5.5em;
-  }
-  nav ul a {
-    color: black;
-    padding: 0.7em 1.5em;
-    display: block;
-    font-family: "Inter";
-  }
-  nav ul a:hover {
-    background: rgba(255, 255, 255, 0.53);
-  }
-  nav .close {
-    float: right;
-    margin: 2em;
-    width: 2em;
-  }
-  header {
-    display: flex;
-    justify-content: space-between;
-  }
-  header svg {
-    width: 2.5em;
-    margin-top: 2.6em;
-    cursor: pointer;
-  }
-  .hero-img {
-    background-image: url(/Sito-Images/herobackground\(mobile\).svg);
-    position: absolute;
-    top: 0;
-    left: unset;
-    right: 0;
-    width: 100%;
-    z-index: -1;
-    background-size: cover;
-    background-position-x: 20%;
-    background-position-y: 40%;
-    height: 55em;
-  }
-  section.hero {
-    text-align: center;
-    color: white;
-    height: 100vh;
-    margin-top: 80vh;
-    margin-right: 2em;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    margin-top: 3.2em;
-  }
-  section.hero .webhero-image {
-    display: none;
-  }
-  section.hero .H1 {
-    font-size: 1.6em;
-    line-height: 1.3em;
-  }
-  section.hero .sub-head {
-    font-size: 0.8em;
-    line-height: 1.3em;
-    color: #A1A0A3;
-  }
-  section.hero .cta-btns {
-    margin: 3em 0;
-  }
-  section.hero .cta-btns .primary-cta {
-    background-color: #3405E1;
-    font-size: 1em;
-    font-weight: normal;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    border-radius: 1em;
-    padding: 0.6em 1.2em 0.6em 1.2em;
-    font-family: "Inter";
-    margin: 2em 1.2em;
-    width: 5.5em;
-  }
-  section.meet-sitio .content {
-    text-align: center;
-  }
-  section.meet-sitio .content .title-H {
-    font-size: 1.4em;
-    line-height: 0.2em;
-    font-weight: bolder;
-  }
-  section.meet-sitio .content .title {
-    font-size: 0.8em;
-    margin-left: 2em;
-    margin-right: 2em;
-    line-height: 1.4em;
-  }
-  section.meet-sitio .more-content .left-content {
-    margin-top: 4em;
-  }
-  section.meet-sitio .more-content .left-content .title {
-    font-size: 1.1em;
-    margin-right: 4em;
-    line-height: 1.4em;
-    font-weight: bold;
-    margin-top: 0.2em;
-  }
-  section.meet-sitio .more-content .right-content {
-    display: flex;
-    justify-content: center;
-    gap: 0.8em;
-  }
-  section.meet-sitio .more-content .right-content .card1 {
-    margin: 2em 0em;
-    background-color: #3405E1;
-    width: 18em;
-    padding: 0.3em 0.8em 0.3em 0.8em;
-    border-radius: 0.6em;
-    height: 16em;
-  }
-  section.meet-sitio .more-content .right-content .card1 .title {
-    font-size: 1em;
-    color: white;
-    font-weight: bold;
-    line-height: 1.4em;
-  }
-  section.meet-sitio .more-content .right-content .card1 .text-content {
-    font-size: 0.8em;
-    color: rgb(230, 230, 230);
-    line-height: 1.4em;
-  }
-  section.meet-sitio .more-content .right-content .card1 .cta-btns {
-    margin: 2em 0;
-  }
-  section.meet-sitio .more-content .right-content .card1 .cta-btns .primary-cta {
-    display: flex;
-    gap: 0.4em;
-    background-color: #080808;
-    font-size: 0.8em;
-    font-weight: normal;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    border-radius: 2em;
-    padding: 1em 1.4em 1em 1.4em;
-    font-family: "Inter";
-    width: 7em;
-  }
-  section.meet-sitio .more-content .right-content .card2 {
-    margin: 2em 0em;
-    background-color: #000000;
-    width: 18em;
-    padding: 0.3em 0.8em 0.3em 0.8em;
-    border-radius: 0.6em;
-    height: 16em;
-  }
-  section.meet-sitio .more-content .right-content .card2 .title {
-    font-size: 1em;
-    color: white;
-    font-weight: bold;
-    line-height: 1.4em;
-  }
-  section.meet-sitio .more-content .right-content .card2 .text-content {
-    font-size: 0.8em;
-    color: rgb(216, 215, 215);
-    line-height: 1.2em;
-  }
-  section.meet-sitio .more-content .right-content .card2 .cta-btns {
-    margin: 2em 0;
-  }
-  section.meet-sitio .more-content .right-content .card2 .cta-btns .primary-cta {
-    display: flex;
-    gap: 0.4em;
-    background-color: #ffffff;
-    font-size: 0.8em;
-    font-weight: 600;
-    color: rgb(10, 10, 10);
-    text-decoration: none;
-    border-radius: 2em;
-    padding: 1em 1.4em 1em 1.4em;
-    font-family: "Inter";
-    width: 7em;
-  }
-  section.popular {
-    margin-top: 24em;
-  }
-  section.popular .content {
-    display: flex;
-    justify-content: space-between;
-  }
-  section.popular .content .category .popularweb {
-    display: none;
-  }
-  section.popular .content .category .popularmobile {
-    font-size: 1em;
-    font-weight: 600;
-    line-height: 0.8em;
-  }
-  section.popular .content .category .text {
-    font-size: 0.8em;
-    font-weight: normal;
-    line-height: 0.4em;
-    color: #565656;
-  }
-  section.popular .content .moreweb {
-    display: none;
-  }
-  section.popular .content .more {
-    display: flex;
-    align-items: center;
-    gap: 0.4em;
-  }
-  section.popular .content .more .view-more {
-    font-size: 0.8em;
-    color: #3405E1;
-  }
-  section.popular .componentsweb {
-    display: none;
-  }
-  section.popular .componentsmobile {
-    margin-top: 1.4em;
-  }
-  section.linear-background .background-img {
-    background-image: url(/Sito-Images/build\ productbackground\(mobile\).svg);
-    position: absolute;
-    top: 125em;
-    left: unset;
-    right: 0;
-    width: 100%;
-    z-index: -1;
-    background-size: cover;
-    background-position-x: 20%;
-    background-position-y: 40%;
-    height: 75em;
-  }
-  section.linear-background .content {
-    margin-top: 12em;
-    color: #ffffff;
-  }
-  section.linear-background .content .left-content {
-    margin-right: 8em;
-  }
-  section.linear-background .content .left-content .text .h1 {
-    font-size: 1em;
-    font-weight: bold;
-    line-height: 1.4;
-  }
-  section.linear-background .content .left-content .text .h2 {
-    margin-top: 2em;
-    font-size: 0.8em;
-    font-weight: lighter;
-    line-height: 1.4;
-    color: #c1c1c1;
-  }
-  section.linear-background .content .left-content .cta-btns {
-    margin: 1.2em 0;
-    height: 8em;
-  }
-  section.linear-background .content .left-content .cta-btns .primary-cta {
-    display: flex;
-    justify-content: center;
-    gap: 0.4em;
-    background-color: #3405E1;
-    font-size: 0.8em;
-    font-weight: normal;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    border-radius: 2em;
-    padding: 1em 1.4em 1em 1.4em;
-    font-family: "Inter";
-    width: 8em;
-  }
-  section.linear-background .content .right-content {
-    margin-top: 1em;
-    width: 30em;
-    height: 50em;
-    position: relative;
-  }
-  section.linear-background .content .talent-img {
-    height: 5rem;
-    position: absolute;
-    width: 100vw;
-    left: 0;
-    overflow-x: hidden;
-    margin-top: 1.4em;
-  }
-  section.linear-background .content .talent-img .slider {
-    display: flex;
-    width: 2500px;
-    animation: scroll 19s linear infinite;
-  }
-  section.linear-background .content .talent-img .slider .slide {
-    height: 20px;
-    width: auto;
-    display: flex;
-    align-items: center;
-    padding-right: 20px;
-    perspective: 100px;
-  }
-  section.linear-background .content .talent-img .slider .slide img {
-    width: 100%;
-    transition: transform 1s;
-  }
-  section.linear-background .content .talent-img .slider .slide img:hover {
-    transform: translateZ(20px);
-  }
-  @keyframes scroll {
-    0% {
-      transform: translateX(0);
-    }
-    100% {
-      transform: translateX(-1250px);
-    }
-  }
-  @keyframes scroll {
-    0% {
-      transform: translateX(0);
-    }
-    100% {
-      transform: translateX(-1250px);
-    }
-  }
-}
 @media only screen and (min-width: 920px) {
   body {
     font-family: "Libre Baskerville", "Inter";
@@ -374,42 +12,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.995);
+    background-color: rgba(255, 255, 255, 0.995);
     position: absolute;
     top: 0;
     left: 0;
     padding: 0% 5% 0% 5%;
-    background-size: contain;
-    background-position-x: 20%;
-    background-position-y: 20%;
     width: 90%;
-    height: 12vh;
-    background-position-x: 20%;
-    background-position-y: 20%;
-    width: 90%;
-  }
-  nav {
-    transform: translateX(0);
-    position: unset;
-    display: block;
-    width: auto;
-    height: auto;
-    background: none;
-  }
-  nav .close {
-    display: none;
-  }
-  a {
-    color: white;
-    padding: 2.5em 1.5em;
-    font-family: "Inter";
-    font-size: 0.9rem;
-  }
-  a:hover {
-    -webkit-text-decoration: #3f59ed;
-            text-decoration: #3f59ed;
-    text-decoration-line: underline;
-    text-decoration-thickness: 0.14em;
+    height: 13vh;
   }
   .primary-cta {
     background-color: #3405E1;
@@ -425,192 +34,81 @@
     width: 5.5em;
   }
   .primary-cta:hover {
-    background-color: #ffffff;
+    background-color: #5781ff;
     color: #000000;
     text-decoration: none;
   }
   ul {
+    margin-top: 1em;
     display: flex;
+    justify-content: space-between;
+    gap: 10em;
     list-style: none;
+  }
+  ul .navb {
+    display: flex;
+    justify-content: space-between;
+    gap: 2em;
+  }
+  ul .navb a {
+    color: rgb(7, 7, 7);
+    text-decoration: none;
+    font-family: "Inter";
+    font-size: 0.9rem;
+  }
+  ul .navb a:hover {
+    -webkit-text-decoration: #dce2fe;
+            text-decoration: #dce2fe;
+    text-decoration-line: underline;
+    text-decoration-thickness: 0.14em;
   }
   ul .active {
     font-size: 0.8em;
   }
-  .white-logoweb {
-    display: contents;
-  }
   .white-logo {
     display: none;
   }
-  .hero-img {
-    background-image: url(/Sito-Images/Hero\ Container\(desk\).svg);
+  .heroimg {
+    background-image: url(/images/herobackground.png);
     position: absolute;
     top: 0;
     left: 0%;
     right: 0%;
+    width: 78.9em;
     z-index: -1;
     background-size: contain;
     background-position-x: 20%;
     background-position-y: 20%;
-    height: 46em;
+    height: 60em;
   }
   section.heroimg .mobilehero-img {
     display: none;
   }
   section.hero {
     text-align: center;
-    color: white;
+    color: rgb(0, 0, 0);
     height: 76vh;
-    margin-top: 50vh;
+    margin-top: 22vh;
     width: 100%;
   }
   section.hero .H1 {
-    margin-left: 14em;
-    margin-right: 14em;
-    margin-top: 0.2em;
-    font-size: 1.6em;
+    margin-left: 9em;
+    margin-right: 9em;
+    margin-top: 0.5em;
+    font-size: 1.8em;
     line-height: 1.5em;
     margin-bottom: 0.2em;
   }
   section.hero .sub-head {
-    margin-left: 25em;
-    margin-right: 25em;
+    margin-left: 12em;
+    margin-right: 12em;
+    margin-bottom: 3em;
     font-size: 0.8em;
     line-height: 1.3em;
-    color: #A1A0A3;
-  }
-  section.hero .cta-btns {
-    margin: 3em 0;
-  }
-  section.hero .cta-btns .primary-cta {
-    background-color: #3405E1;
-    font-size: 1em;
-    font-weight: normal;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    border-radius: 1em;
-    padding: 0.6em 1.2em 0.6em 1.2em;
-    font-family: "Inter";
-    margin: 2em 1.2em;
-    width: 5.5em;
-  }
-  section.meet-sitio .content {
-    text-align: center;
-    margin-top: 1em;
-  }
-  section.meet-sitio .content .title-H {
-    font-size: 1.8em;
-    font-weight: bolder;
-  }
-  section.meet-sitio .content .title {
-    font-size: 1em;
-    margin-left: 18em;
-    margin-right: 18em;
-    line-height: 1.6em;
-  }
-  section.meet-sitio .more-content {
-    display: flex;
-  }
-  section.meet-sitio .more-content .left-content {
-    margin-top: 8em;
-  }
-  section.meet-sitio .more-content .left-content .title {
-    font-size: 1.3em;
-    margin-right: 6em;
-    line-height: 1.5em;
-    font-weight: bold;
-  }
-  section.meet-sitio .more-content .left-content svg {
-    margin-top: 4em;
-  }
-  section.meet-sitio .more-content .right-content {
-    display: flex;
-    justify-content: center;
-    gap: 0.8em;
-    margin-top: 2em;
-  }
-  section.meet-sitio .more-content .right-content .card1 {
-    margin: 2em 0em;
-    background-color: #ffffff;
-    border-width: 0.05em;
-    border-color: #000000;
-    border-style: solid;
-    width: 14em;
-    padding: 0.5em 1.2em 0.3em 1.2em;
-    border-radius: 0.4em;
-    height: 18em;
-  }
-  section.meet-sitio .more-content .right-content .card1 .title {
-    font-size: 1.2em;
-    margin-right: 1.2em;
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-    line-height: 1.4em;
-  }
-  section.meet-sitio .more-content .right-content .card1 .text-content {
-    font-size: 1em;
-    color: rgb(54, 53, 53);
-    line-height: 1.4em;
-  }
-  section.meet-sitio .more-content .right-content .card1 .cta-btns {
-    margin: 2em 0em;
-  }
-  section.meet-sitio .more-content .right-content .card1 .cta-btns .primary-cta {
-    display: flex;
-    gap: 0.6em;
-    background-color: #0e0198;
-    font-size: 0.8em;
-    font-weight: normal;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    border-radius: 2em;
-    padding: 1em 2.4em 1em 2.4em;
-    font-family: "Inter";
-    width: 8em;
-    margin-left: 0em;
-  }
-  section.meet-sitio .more-content .right-content .card2 {
-    margin: 2em 0em;
-    background-color: #ffffff;
-    border-width: 0.05em;
-    border-color: #000000;
-    border-style: solid;
-    width: 14em;
-    padding: 0.5em 1.2em 0.3em 1.2em;
-    border-radius: 0.4em;
-    height: 18em;
-  }
-  section.meet-sitio .more-content .right-content .card2 .title {
-    font-size: 1.2em;
-    margin-right: 1.2em;
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-    line-height: 1.4em;
-  }
-  section.meet-sitio .more-content .right-content .card2 .text-content {
-    font-size: 1em;
-    color: rgb(54, 53, 53);
-    line-height: 1.4em;
-  }
-  section.meet-sitio .more-content .right-content .card2 .cta-btns {
-    margin: 2em 0em;
-  }
-  section.meet-sitio .more-content .right-content .card2 .cta-btns .primary-cta {
-    display: flex;
-    gap: 0.6em;
-    background-color: #000000;
-    font-size: 0.8em;
-    font-weight: normal;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    border-radius: 2em;
-    padding: 1em 2.4em 1em 2.4em;
-    font-family: "Inter";
-    width: 8em;
-    margin-left: 0em;
+    color: #232324;
   }
   section.popular {
-    margin-top: 1em;
+    margin-top: 15em;
   }
   section.popular .content {
     display: flex;
@@ -652,6 +150,31 @@
     font-size: 0.8em;
     color: #3405E1;
   }
+  section.popular .populardemand {
+    display: flex;
+    align-items: center;
+    gap: 1em;
+  }
+  section.popular .populardemand .try {
+    background-color: #f1f1f1;
+    border-radius: 12em;
+    padding: 1em 0.8em 1em 0.8em;
+    margin: 0em 0em;
+    width: 12em;
+  }
+  section.popular .populardemand .try .trytry {
+    display: flex;
+    align-items: center;
+    gap: 1em;
+  }
+  section.popular .populardemand .try .trytry .left {
+    background-color: #ffffff;
+    border-radius: 12em;
+    padding: 0.6em 0.6em 0.6em 0.6em;
+  }
+  section.popular .populardemand .try .trytry .right {
+    font-size: 0.85em;
+  }
   section.popular .componentsmobile {
     display: none;
   }
@@ -659,10 +182,113 @@
     display: contents;
     margin-top: 1.4em;
   }
+  section.meet-sitio .content {
+    margin-top: 10em;
+  }
+  section.meet-sitio .content .title-H {
+    font-size: 1.8em;
+    font-weight: bolder;
+    margin-bottom: 0;
+  }
+  section.meet-sitio .content .title {
+    font-size: 0.9em;
+    margin-right: 9em;
+    line-height: 1.4em;
+  }
+  section.meet-sitio .more-content {
+    display: flex;
+    justify-content: space-between;
+  }
+  section.meet-sitio .more-content .left-content {
+    background-color: #A9D1F9;
+    border-radius: 0.8em;
+    padding: 1.2em 4.2em 0em 4.2em;
+    width: 28em;
+    margin-top: 2em;
+    height: 29em;
+  }
+  section.meet-sitio .more-content .left-content .h1 {
+    font-size: 1.3em;
+    line-height: 1.5em;
+    font-weight: bold;
+    margin-bottom: 2em;
+  }
+  section.meet-sitio .more-content .right-content {
+    margin: 2em;
+  }
+  section.meet-sitio .more-content .right-content .card1 {
+    background-color: DEAFF9;
+    width: 25em;
+    padding: 1.2em 2em 1.2em 2em;
+    border-radius: 0.8em;
+    height: 12em;
+  }
+  section.meet-sitio .more-content .right-content .card1 .maint {
+    font-size: 1.2em;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+  }
+  section.meet-sitio .more-content .right-content .card1 .body {
+    font-size: 1em;
+    color: rgb(54, 53, 53);
+  }
+  section.meet-sitio .more-content .right-content .card1 .cta-btns {
+    margin: 2em 0em;
+  }
+  section.meet-sitio .more-content .right-content .card1 .cta-btns .primary-cta {
+    display: flex;
+    gap: 0.6em;
+    background-color: A03CF1;
+    font-size: 0.8em;
+    font-weight: normal;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    border-radius: 2em;
+    padding: 1em 2.4em 1em 2.4em;
+    font-family: "Inter";
+    width: 8em;
+    margin-left: 0em;
+  }
+  section.meet-sitio .more-content .right-content .card2 {
+    margin-top: 1.6em;
+    background-color: FBF540;
+    width: 25em;
+    padding: 1.2em 2em 1.2em 2em;
+    border-radius: 0.8em;
+    height: 12em;
+  }
+  section.meet-sitio .more-content .right-content .card2 .maint {
+    font-size: 1.2em;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    margin-bottom: 0em;
+  }
+  section.meet-sitio .more-content .right-content .card2 .body {
+    margin-top: 0.6em;
+    font-size: 1em;
+    color: rgb(54, 53, 53);
+  }
+  section.meet-sitio .more-content .right-content .card2 .cta-btns {
+    margin: 2em 0em;
+  }
+  section.meet-sitio .more-content .right-content .card2 .cta-btns .primary-cta {
+    display: flex;
+    gap: 0.6em;
+    background-color: #000000;
+    font-size: 0.8em;
+    font-weight: normal;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    border-radius: 2em;
+    padding: 1em 2.4em 1em 2.4em;
+    font-family: "Inter";
+    width: 8em;
+    margin-left: 0em;
+  }
   section.linear-background .background-img {
     background-image: url(/Sito-Images/build\ productbackground\(mobile\).svg);
     position: absolute;
-    top: 100.5em;
+    top: 120.5em;
     left: unset;
     right: 0;
     width: 100%;
