--- a/css.home/main.css
+++ b/css.home/main.css
@@ -69,7 +69,7 @@
     display: none;
   }
   .heroimg {
-    background-image: url(/images/herobackground.jpg);
+    background-image: url(./images/herobackground.jpg);
     position: absolute;
     top: 0;
     left: 0%;
