--- a/css.home/main.scss
+++ b/css.home/main.scss
@@ -482,7 +482,7 @@
     }
     
     .heroimg {
-        background-image: url(/images/herobackground.jpg);
+        background-image: url(./images/herobackground.jpg);
         // background-color: #000000;
         position: absolute;
         top: 0;
