--- a/css.home/main.css
+++ b/css.home/main.css
@@ -69,7 +69,7 @@
     display: none;
   }
   .heroimg {
-    background-image: url(./images/herobackground.jpg);
+    background-image: url(https://runogray.github.io/Sitio-website/images/herobackground.jpg);
     position: absolute;
     top: 0;
     left: 0%;
@@ -120,12 +120,11 @@
     background-size: contain;
     background-position-x: 20%;
     background-position-y: 20%;
-    height: 60em;
+    height: 18em;
   }
   section.popular .content {
-    margin-top: 4em;
-    display: flex;
-    justify-content: space-between;
+    margin-left: 5em;
+    margin-top: 6.5em;
     align-items: last baseline;
   }
   section.popular .content .category .popularmobile {
@@ -164,6 +163,7 @@
     color: #3405E1;
   }
   section.popular .populardemand {
+    margin-left: 5em;
     display: flex;
     align-items: center;
     gap: 1em;
@@ -171,7 +171,7 @@
   section.popular .populardemand .try {
     background-color: #f1f1f1;
     border-radius: 12em;
-    padding: 1em 0.8em 1em 0.8em;
+    padding: 1em 0.3em 1em 0.8em;
     margin: 0em 0em;
     width: 12em;
   }
@@ -196,7 +196,7 @@
     margin-top: 1.4em;
   }
   section.meet-sitio .content {
-    margin-top: 10em;
+    margin-top: 30em;
   }
   section.meet-sitio .content .title-H {
     font-size: 1.8em;
@@ -204,8 +204,8 @@
     margin-bottom: 0;
   }
   section.meet-sitio .content .title {
-    font-size: 0.9em;
-    margin-right: 9em;
+    font-size: 1em;
+    margin-right: 17em;
     line-height: 1.4em;
   }
   section.meet-sitio .more-content {
@@ -294,6 +294,55 @@
     text-decoration: none;
     border-radius: 2em;
     padding: 1em 2.4em 1em 2.4em;
+    font-family: "Inter";
+    width: 8em;
+    margin-left: 0em;
+  }
+  .linear-background {
+    background-color: F3F4F5;
+    position: absolute;
+    top: 120em;
+    left: 0%;
+    right: 0%;
+    width: 78.9em;
+    background-size: contain;
+    background-position-x: 20%;
+    background-position-y: 20%;
+    height: 38em;
+  }
+  .linear-background .content {
+    display: flex;
+    gap: 4em;
+    margin-top: 3.5em;
+    margin-left: 5em;
+    margin-right: 5em;
+  }
+  .linear-background .content .text {
+    margin-right: 10em;
+  }
+  .linear-background .content .text .h1 {
+    margin-top: 3.5em;
+    font-size: 1.8em;
+    font-weight: bolder;
+    margin-bottom: 0;
+  }
+  .linear-background .content .text .h2 {
+    font-size: 1em;
+    line-height: 1.4em;
+  }
+  .linear-background .content .cta-btns {
+    margin: 1em 0em;
+  }
+  .linear-background .content .cta-btns .primary-cta {
+    display: flex;
+    gap: 0.6em;
+    background-color: #000000;
+    font-size: 1em;
+    font-weight: normal;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    border-radius: 2em;
+    padding: 1em 1em 1em 2em;
     font-family: "Inter";
     width: 8em;
     margin-left: 0em;
