--- a/css.home/main.scss
+++ b/css.home/main.scss
@@ -541,11 +541,10 @@
         background-size:contain;
         background-position-x: 20%;
         background-position-y: 20%;
-        height: 60em;
+        height: 18em;
         .content{
-            margin-top: 4em;
-            display: flex;
-            justify-content: space-between;
+            margin-left: 5em;
+            margin-top: 6.5em;
             align-items:last baseline;
             
             .category{
@@ -587,13 +586,14 @@
             }
         }
         .populardemand{
+            margin-left: 5em;
             display: flex;
             align-items: center;
             gap: 1em;
             .try{
                background-color: #f1f1f1; 
                border-radius: 12em;
-               padding: 1em 0.8em 1em 0.8em;
+               padding: 1em 0.3em 1em 0.8em;
                margin: 0em 0em;
                width: 12em; 
                .trytry{
@@ -624,15 +624,15 @@
     
     section.meet-sitio {
         .content {
-            margin-top: 10em;
+            margin-top: 30em;
             .title-H{
                 font-size: 1.8em;
                 font-weight:bolder;
                 margin-bottom: 0
             }
             .title{
-                font-size: 0.9em;
-                margin-right: 9em;
+                font-size: 1em;
+                margin-right: 17em;
                 line-height: 1.4em;
             }
         }
@@ -733,10 +733,58 @@
             }
             
         }
-    }   
-// <<<<<<< HEAD
-  
+    } 
+    .linear-background{
+        background-color: F3F4F5;
+        position: absolute;
+        top: 120em;
+        left: 0%;
+        right: 0%;
+        width: 78.9em;
+        background-size:contain;
+        background-position-x: 20%;
+        background-position-y: 20%;
+        height: 38em;
+        .content{
+            display: flex;
+            gap: 4em;
+            margin-top: 3.5em;
+            margin-left: 5em;
+            margin-right: 5em;
+            .text{
+                margin-right: 10em;
+                .h1{
+                    margin-top: 3.5em;
+                    font-size: 1.8em;
+                    font-weight:bolder;
+                    margin-bottom: 0
+                }
+                .h2{
+                    font-size: 1em;
+                    line-height: 1.4em;
+                }
+            }
     
+            .cta-btns {
+                margin: 1em 0em;
+                .primary-cta {
+                    display: flex;
+                    gap: 0.6em;
+                    background-color: #000000;
+                    font-size: 1em;
+                    font-weight: normal;
+                    color: rgb(255, 255, 255);
+                    text-decoration: none;
+                    border-radius: 2em;
+                    padding: 1em 1em 1em 2em;
+                    font-family: 'Inter';
+                    width: 8em;
+                    margin-left: 0em;
+                }
+            }
+        }
+    }
+// <<<<<<< HEAD    
 // =======
 // >>>>>>> fc9cf14bd24bd2aee6a83ea19a1dea5da97819c8
 //     section.linear-background
